Check parameter IDs for other annotations

--- a/notebooks/31-Check-parameter-ID.ipynb
+++ b/notebooks/31-Check-parameter-ID.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4d77c89e-f80c-486a-911c-a1da45a8bf18",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,17 @@
     "# Import libraries used in this notebook\n",
     "import pandas as pd\n",
     "from ooi_data_explorations.common import get_parameter_information"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "704599c9-8d4d-40e1-bbd2-9d8a7142c796",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### Annotation 5060"
    ]
   },
   {
@@ -239,9 +250,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc5f0397-5d60-437a-b190-93fe5c617b26",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### Annotation 4468"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "54ab78dc-86c2-44e0-9cf6-bf5343547567",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Create list of parameter ID's referenced in one VELPT annotation\n",
+    "anno4468 = [\"1059\",\"1060\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8922408b-f96e-4b2e-8a8d-029daa73e3d7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Get parameter info for parameters in annotation #5060\n",
+    "param4468={}\n",
+    "for num in anno4468:\n",
+    "    param4468[num] = get_parameter_information(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5b03b3cf-9145-496e-b23d-ab9a0d1ba320",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1059 : eastward_wind_velocity\n",
+      "1060 : northward_wind_velocity\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in param4468:\n",
+    "    print(key, \":\", param4468[key].get(\"name\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02b98441-4a2d-47c6-afaf-5d1ebc8ecb71",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### Annotation XXXX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "de6113ca-f089-4763-a2bf-366513ec5404",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Create list of parameter ID's referenced in one VELPT annotation\n",
+    "anno4468 = [\"1059\",\"1060\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ccdf1b67-8a45-4c53-b019-ed7b44d8b962",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Get parameter info for parameters in annotation #5060\n",
+    "param4468={}\n",
+    "for num in anno4468:\n",
+    "    param4468[num] = get_parameter_information(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d01bfea5-ae4c-47c1-acd0-bb455f0c29ed",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1059 : eastward_wind_velocity\n",
+      "1060 : northward_wind_velocity\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in param4468:\n",
+    "    print(key, \":\", param4468[key].get(\"name\"))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54cd211e-5868-48c0-b0ae-e352660cb8e3",
+   "id": "e9453980-d4de-4f2b-aeb6-8fb2443d2f31",
    "metadata": {},
    "outputs": [],
    "source": []
