Add pseudo code placeholder for updating comparison table results

--- a/notebooks/41-Find-QARTOD-not-executed.ipynb
+++ b/notebooks/41-Find-QARTOD-not-executed.ipynb
@@ -1150,8 +1150,14 @@
     "        table = grt_table.reset_index(drop=True)\n",
     "        table[\"GRTtable\"] = True\n",
     "    if ct_table is not False:\n",
-    "        table[\"CTtable\"] = table[\"parameters\"].apply(lambda x: True if x in ct_table[\"parameters\"] else False)\n",
-    "        # ct_table[\"parameters\"].apply(lambda x\n",
+    "        # keep commented out until we get a basic loop working\n",
+    "        # table[\"CTtable\"] = table[\"parameters\"].apply(lambda x: True if x in ct_table[\"parameters\"] else False)\n",
+    "        for x in ct_table[\"parameters\"]:\n",
+    "            if x not in table[\"parameters\"]:\n",
+    "                # Below here is just pseudo code bc I don't remember pandas methods\n",
+    "                # table.append(ct_table.row_where(ct_table[\"parameters\"]==x))\n",
+    "                # table.row_where(parameter==x)[\"GRTtable\"]=False\n",
+    "                # table.row_where(parameter==x)[\"CTtable\"]=True\n",
     "    else:\n",
     "        table[\"CTtable\"] = False\n",
     "    return table"
@@ -1281,7 +1287,7 @@
   "kernelspec": {
    "display_name": "qartod_test",
    "language": "python",
-   "name": "qartod_test"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
