Update results table with tests executed and save

--- a/notebooks/41-Find-QARTOD-not-executed.ipynb
+++ b/notebooks/41-Find-QARTOD-not-executed.ipynb
@@ -24,7 +24,8 @@
     "import xarray as xr\n",
     "import requests\n",
     "import io\n",
-    "import ast"
+    "import ast\n",
+    "from glob import glob"
    ]
   },
   {
@@ -1280,6 +1281,45 @@
     "if grt_table is not False:\n",
     "    table[\"GRTtable\"] \n",
     "table[\"CTtable\"] = table[\"parameters\"].apply(lambda x: x is True if () else False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09313d57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add column with QARTOD tests executed by parameter\n",
+    "# def add_test_exe(table, test_exe):\n",
+    "for row in table: \n",
+    "    param = row[\"parameters\"]\n",
+    "    row[\"testsExecuted\"] = test_exe.get(param)\n",
+    "# return table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12f61766",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write QARTOD test cross-reference results table to a CSV \n",
+    "csv_name = \"test_cross-ref_results.csv\"\n",
+    "csv_dir = \"/../data/processed/\"\n",
+    "# def write_results(table, csv_name=\"test_cross-ref_results.csv\", csv_dir=\"/../data/processed/\"):\n",
+    "csv_path = csv_dir+csv_name\n",
+    "if glob(csv_path) is None:\n",
+    "    file = open(csv_path, mode='w')\n",
+    "    continue\n",
+    "else: \n",
+    "    file = open(csv_path, mode='a')\n",
+    "    continue\n",
+    "table.to_csv(file, mode='a')\n",
+    "# close file (can't remember how to do this now)\n",
+    "print(f\"results saved to {csv_path}\")\n",
+    "# return"
    ]
   }
  ],
