Dropped repeated "index" from list of datasets

--- a/notebooks/41-Find-QARTOD-not-executed.ipynb
+++ b/notebooks/41-Find-QARTOD-not-executed.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "05aed376-e306-4387-89ac-59191d103d93",
    "metadata": {
     "tags": []
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6a4ef702-3cf7-4798-8c34-d64a2be0d624",
    "metadata": {
     "tags": []
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8a96ff8e-09c0-4efe-9aca-6172ef1f6843",
    "metadata": {
     "tags": []
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "a1f44a23-c58e-4a16-9091-102eef40ce2d",
    "metadata": {
     "tags": []
@@ -93,7 +93,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>array</th>\n",
        "      <th>node</th>\n",
        "      <th>instrument</th>\n",
@@ -105,7 +104,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>SBD12</td>\n",
        "      <td>08-FDCHPA000</td>\n",
@@ -115,7 +113,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>SBD12</td>\n",
        "      <td>06-METBKA001</td>\n",
@@ -125,7 +122,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>SBD12</td>\n",
        "      <td>06-METBKA000</td>\n",
@@ -135,7 +131,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>SBD12</td>\n",
        "      <td>05-WAVSSA000</td>\n",
@@ -145,7 +140,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>SBD12</td>\n",
        "      <td>04-PCO2AA000</td>\n",
@@ -155,7 +149,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>SBD12</td>\n",
        "      <td>03-HYDGN0000</td>\n",
@@ -165,7 +158,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>SBD12</td>\n",
        "      <td>00-DCLENG000</td>\n",
@@ -175,7 +167,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>SBD11</td>\n",
        "      <td>06-METBKA001</td>\n",
@@ -185,7 +176,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>SBD11</td>\n",
        "      <td>06-METBKA000</td>\n",
@@ -195,7 +185,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>SBD11</td>\n",
        "      <td>02-HYDGN0000</td>\n",
@@ -205,7 +194,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>SBD11</td>\n",
        "      <td>01-MOPAK0000</td>\n",
@@ -215,7 +203,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>SBD11</td>\n",
        "      <td>00-DCLENG000</td>\n",
@@ -225,7 +212,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>SBC11</td>\n",
        "      <td>00-CPMENG000</td>\n",
@@ -235,7 +221,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>RID27</td>\n",
        "      <td>04-DOSTAD000</td>\n",
@@ -245,7 +230,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>RID27</td>\n",
        "      <td>03-CTDBPC000</td>\n",
@@ -255,7 +239,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>RID27</td>\n",
        "      <td>02-FLORTD000</td>\n",
@@ -265,7 +248,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>RID27</td>\n",
        "      <td>01-OPTAAD000</td>\n",
@@ -275,7 +257,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>RID27</td>\n",
        "      <td>00-DCLENG000</td>\n",
@@ -285,7 +266,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>RID26</td>\n",
        "      <td>08-SPKIRB000</td>\n",
@@ -295,7 +275,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>0</td>\n",
        "      <td>CP01CNSM</td>\n",
        "      <td>RID26</td>\n",
        "      <td>07-NUTNRB000</td>\n",
@@ -308,27 +287,27 @@
        "</div>"
       ],
       "text/plain": [
-       "    index     array   node    instrument                       refdes  \\\n",
-       "0       0  CP01CNSM  SBD12  08-FDCHPA000  CP01CNSM-SBD12-08-FDCHPA000   \n",
-       "1       0  CP01CNSM  SBD12  06-METBKA001  CP01CNSM-SBD12-06-METBKA001   \n",
-       "2       0  CP01CNSM  SBD12  06-METBKA000  CP01CNSM-SBD12-06-METBKA000   \n",
-       "3       0  CP01CNSM  SBD12  05-WAVSSA000  CP01CNSM-SBD12-05-WAVSSA000   \n",
-       "4       0  CP01CNSM  SBD12  04-PCO2AA000  CP01CNSM-SBD12-04-PCO2AA000   \n",
-       "5       0  CP01CNSM  SBD12  03-HYDGN0000  CP01CNSM-SBD12-03-HYDGN0000   \n",
-       "6       0  CP01CNSM  SBD12  00-DCLENG000  CP01CNSM-SBD12-00-DCLENG000   \n",
-       "7       0  CP01CNSM  SBD11  06-METBKA001  CP01CNSM-SBD11-06-METBKA001   \n",
-       "8       0  CP01CNSM  SBD11  06-METBKA000  CP01CNSM-SBD11-06-METBKA000   \n",
-       "9       0  CP01CNSM  SBD11  02-HYDGN0000  CP01CNSM-SBD11-02-HYDGN0000   \n",
-       "10      0  CP01CNSM  SBD11  01-MOPAK0000  CP01CNSM-SBD11-01-MOPAK0000   \n",
-       "11      0  CP01CNSM  SBD11  00-DCLENG000  CP01CNSM-SBD11-00-DCLENG000   \n",
-       "12      0  CP01CNSM  SBC11  00-CPMENG000  CP01CNSM-SBC11-00-CPMENG000   \n",
-       "13      0  CP01CNSM  RID27  04-DOSTAD000  CP01CNSM-RID27-04-DOSTAD000   \n",
-       "14      0  CP01CNSM  RID27  03-CTDBPC000  CP01CNSM-RID27-03-CTDBPC000   \n",
-       "15      0  CP01CNSM  RID27  02-FLORTD000  CP01CNSM-RID27-02-FLORTD000   \n",
-       "16      0  CP01CNSM  RID27  01-OPTAAD000  CP01CNSM-RID27-01-OPTAAD000   \n",
-       "17      0  CP01CNSM  RID27  00-DCLENG000  CP01CNSM-RID27-00-DCLENG000   \n",
-       "18      0  CP01CNSM  RID26  08-SPKIRB000  CP01CNSM-RID26-08-SPKIRB000   \n",
-       "19      0  CP01CNSM  RID26  07-NUTNRB000  CP01CNSM-RID26-07-NUTNRB000   \n",
+       "       array   node    instrument                       refdes  \\\n",
+       "0   CP01CNSM  SBD12  08-FDCHPA000  CP01CNSM-SBD12-08-FDCHPA000   \n",
+       "1   CP01CNSM  SBD12  06-METBKA001  CP01CNSM-SBD12-06-METBKA001   \n",
+       "2   CP01CNSM  SBD12  06-METBKA000  CP01CNSM-SBD12-06-METBKA000   \n",
+       "3   CP01CNSM  SBD12  05-WAVSSA000  CP01CNSM-SBD12-05-WAVSSA000   \n",
+       "4   CP01CNSM  SBD12  04-PCO2AA000  CP01CNSM-SBD12-04-PCO2AA000   \n",
+       "5   CP01CNSM  SBD12  03-HYDGN0000  CP01CNSM-SBD12-03-HYDGN0000   \n",
+       "6   CP01CNSM  SBD12  00-DCLENG000  CP01CNSM-SBD12-00-DCLENG000   \n",
+       "7   CP01CNSM  SBD11  06-METBKA001  CP01CNSM-SBD11-06-METBKA001   \n",
+       "8   CP01CNSM  SBD11  06-METBKA000  CP01CNSM-SBD11-06-METBKA000   \n",
+       "9   CP01CNSM  SBD11  02-HYDGN0000  CP01CNSM-SBD11-02-HYDGN0000   \n",
+       "10  CP01CNSM  SBD11  01-MOPAK0000  CP01CNSM-SBD11-01-MOPAK0000   \n",
+       "11  CP01CNSM  SBD11  00-DCLENG000  CP01CNSM-SBD11-00-DCLENG000   \n",
+       "12  CP01CNSM  SBC11  00-CPMENG000  CP01CNSM-SBC11-00-CPMENG000   \n",
+       "13  CP01CNSM  RID27  04-DOSTAD000  CP01CNSM-RID27-04-DOSTAD000   \n",
+       "14  CP01CNSM  RID27  03-CTDBPC000  CP01CNSM-RID27-03-CTDBPC000   \n",
+       "15  CP01CNSM  RID27  02-FLORTD000  CP01CNSM-RID27-02-FLORTD000   \n",
+       "16  CP01CNSM  RID27  01-OPTAAD000  CP01CNSM-RID27-01-OPTAAD000   \n",
+       "17  CP01CNSM  RID27  00-DCLENG000  CP01CNSM-RID27-00-DCLENG000   \n",
+       "18  CP01CNSM  RID26  08-SPKIRB000  CP01CNSM-RID26-08-SPKIRB000   \n",
+       "19  CP01CNSM  RID26  07-NUTNRB000  CP01CNSM-RID26-07-NUTNRB000   \n",
        "\n",
        "                                                  url  \\\n",
        "0   https://ooinet.oceanobservatories.org/api/m2m/...   \n",
@@ -375,7 +354,7 @@
        "19  [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,12 +364,13 @@
     "site = 'CP01CNSM'\n",
     "datasets = M2M.search_datasets(site)\n",
     "datasets.reset_index(inplace=True)\n",
+    "datasets.drop(labels=\"index\", axis=1, inplace=True)\n",
     "datasets[0:20]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "acf67d8b-c92f-4b4b-ad75-f4ec74e6bf59",
    "metadata": {
     "tags": []
@@ -405,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "f2ee90b2-7410-4829-9e65-350b721b6f62",
    "metadata": {
     "tags": []
@@ -423,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "3206924f-23aa-43b6-8c8e-bc846fe635ff",
    "metadata": {
     "tags": []
@@ -433,14 +413,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading 1 data file(s) from the local kdata directory\n"
+      "Downloading 0 data file(s) from the local kdata directory\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading and Processing Data Files: 100%|██████████| 1/1 [00:03<00:00,  3.18s/it]\n"
+      "Loading and Processing Data Files: 0it [00:00, ?it/s]\n",
+      "C:\\Users\\kylene.cooley\\Documents\\GitHub\\ooi-data-explorations\\python\\ooi_data_explorations\\common.py:915: UserWarning: No data files were loaded from the JupyterHub kdata directory.\n",
+      "  warnings.warn(message)\n"
      ]
     }
    ],
